--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -70,6 +70,7 @@ jobs:
           mingw-w64-i686-sqlite3
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
+          mingw-w64-imagemagick
           vim
           zip
     - name: update-protobuf
@@ -84,7 +85,7 @@ jobs:
         repository: 'davidgiven/fluxengine-testdata'
         path: 'fluxengine-testdata'
     - name: build
-      run: make -j1 hide= -C fluxengine
+      run: make -j`nproc` -C fluxengine
 
     - name: nsis
       run: |
