--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
           mingw-w64-i686-nsis
+          mingw-w64-i686-python
           zip
           vim
     - uses: actions/checkout@v3
@@ -42,7 +43,7 @@ jobs:
 
     - name: build
       run: |
-        make -j2
+        MAGICK_TIME_LIMIT=100 make -j`nproc`
 
     - name: nsis
       run: |
