--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,18 +23,20 @@ jobs:
         install: >-
           diffutils
           make
+          mingw-w64-i686-binutils
           mingw-w64-i686-fmt
           mingw-w64-i686-gcc
           mingw-w64-i686-libusb
+          mingw-w64-i686-nsis
           mingw-w64-i686-pkg-config
           mingw-w64-i686-protobuf
+          mingw-w64-i686-python
           mingw-w64-i686-sqlite3
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
-          mingw-w64-i686-nsis
-          mingw-w64-i686-python
-          zip
+          mingw-w64-i686-imagemagick
           vim
+          zip
     - uses: actions/checkout@v3
 
     - name: update-protobuf
