--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
           mingw-w64-i686-png2ico
+          mingw-w64-i686-qt5-base
           mingw-w64-i686-qt5-static
           vim
           zip
