--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,13 +29,12 @@ jobs:
           mingw-w64-i686-libusb
           mingw-w64-i686-nsis
           mingw-w64-i686-pkg-config
-          https://repo.msys2.org/mingw/mingw32/mingw-w64-i686-protobuf-21.9-1-any.pkg.tar.zst
           mingw-w64-i686-python
           mingw-w64-i686-sqlite3
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
           mingw-w64-i686-png2ico
-          mingw-w64-i686-qt5-base
+          mingw-w64-i686-qt5-static
           vim
           zip
     - uses: actions/checkout@v3
