--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,10 +94,12 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: brew
       run: brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg
+
     - name: make
-      run: gmake
+      run: gmake -j`nproc`
 
     - name: tag
       uses: EndBug/latest-tag@latest
