Try installing OpenSUSE packages.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -57,6 +57,9 @@ jobs:
       with:
         distribution: openSUSE-Leap-15.2
         use-cache: true
+        additional-packages:
+          gcc
+          gcc-c++
 
     - name: go
       run: |
