Install the rest of the packages.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -60,6 +60,32 @@ jobs:
         additional-packages:
           gcc
           gcc-c++
+          protobuf-c-compiler
+          protobuf-devel
+          fmt-devel
+          systemd-devel
+          sqlite-devel
+          wxGTK-devel
+          mingw32-gcc
+          mingw32-gcc-c++
+          mingw32-zlib-static
+          mingw32-protobuf-static
+          mingw32-sqlite-static
+          mingw32-wxWidgets3-static
+          mingw32-libpng-static
+          mingw32-libjpeg-static
+          mingw32-libtiff-static
+          mingw32-nsis
+
+    - uses: actions/checkout@v3
+      with:
+        repository: 'davidgiven/fluxengine'
+        path: 'fluxengine'
+
+    - uses: actions/checkout@v3
+      with:
+        repository: 'davidgiven/fluxengine-testdata'
+        path: 'fluxengine-testdata'
 
     - name: go
       run: |
