--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -55,47 +55,31 @@ jobs:
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+    - uses: actions/checkout@v3
+      with:
+        repository: 'davidgiven/fluxengine'
+        path: 'fluxengine'
+
+    - uses: actions/checkout@v3
+      with:
+        repository: 'davidgiven/fluxengine-testdata'
+        path: 'fluxengine-testdata'
+
     - name: setup WSL
       run: |
         winget install  --accept-source-agreements --accept-source-agreements whitewaterfoundry.fedora-remix-for-wsl
+        wsl --set-default fedoraremix
+        wsl sh -c 'dnf -y gcc gcc-c++ protobuf-c-compiler protobuf-devel fmt-devel systemd-devel sqlite-devel wxGTK-devel mingw32-gcc mingw32-gcc-c++ mingw32-zlib-static mingw32-protobuf-static mingw32-sqlite-static mingw32-wxWidgets3-static mingw32-libpng-static mingw32-libjpeg-static mingw32-libtiff-static mingw32-nsis'
 
     - name: run
       run: |
-        wsl -e sh 'pwd; ls'
+        wsl sh -c 'make -C fluxengine BUILDTYPE=windows -j$(nproc)'
         
     #- uses: Vampire/setup-wsl@v3
     #  with:
     #    distribution: openSUSE-Leap-15.2
     #    use-cache: true
     #    additional-packages:
-    #      gcc
-    #      gcc-c++
-    #      protobuf-c-compiler
-    #      protobuf-devel
-    #      fmt-devel
-    #      systemd-devel
-    #      sqlite-devel
-    #      wxGTK-devel
-    #      mingw32-gcc
-    #      mingw32-gcc-c++
-    #      mingw32-zlib-static
-    #      mingw32-protobuf-static
-    #      mingw32-sqlite-static
-    #      mingw32-wxWidgets3-static
-    #      mingw32-libpng-static
-    #      mingw32-libjpeg-static
-    #      mingw32-libtiff-static
-    #      mingw32-nsis
-
-    #- uses: actions/checkout@v3
-    #  with:
-    #    repository: 'davidgiven/fluxengine'
-    #    path: 'fluxengine'
-
-    #- uses: actions/checkout@v3
-    #  with:
-    #    repository: 'davidgiven/fluxengine-testdata'
-    #    path: 'fluxengine-testdata'
 
     #- name: go
     #  run: |
