--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -53,8 +53,8 @@ jobs:
     - name: setup WSL
       run: |
         curl -L https://github.com/VSWSL/Fedora-WSL/releases/download/v37.0.3.0/rootfs.tar.gz | wsl --import fedora fedora -
+        wsl --set-version fedora 1
         wsl --set-default fedora
-        wsl --set-version fedora 2
         wsl sh -c 'dnf -y install https://github.com/rpmsphere/noarch/raw/master/r/rpmsphere-release-38-1.noarch.rpm'
         wsl sh -c 'dnf -y install gcc gcc-c++ protobuf-c-compiler protobuf-devel fmt-devel systemd-devel sqlite-devel wxGTK-devel mingw32-gcc mingw32-gcc-c++ mingw32-zlib-static mingw32-protobuf-static mingw32-sqlite-static mingw32-wxWidgets3-static mingw32-libpng-static mingw32-libjpeg-static mingw32-libtiff-static mingw32-nsis png2ico'
 
@@ -75,7 +75,9 @@ jobs:
 
     - name: run
       run: |
-        wsl sh -c 'make -C fluxengine BUILDTYPE=windows V=1'
+        wsl sh -c 'cp -av fluxengine fluxengine-testdata /tmp/'
+        wsl sh -c 'make -C /tmp/fluxengine BUILDTYPE=windows V=1'
+        wsl sh -c 'cp /tmp/*.exe .'
         
     #- uses: Vampire/setup-wsl@v3
     #  with:
