--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -56,6 +56,7 @@ jobs:
         unzip fedora.msixbundle Fedora-Remix-for-WSL-SL_40.1.0.0_x64.msix
         unzip Fedora-Remix-for-WSL-SL_40.1.0.0_x64.msix install.tar.gz
         wsl --update
+        wsl --set-default-version 1
         wsl --import fedora fedora install.tar.gz
         wsl --set-default fedora
         wsl sh -c 'dnf -y install https://github.com/rpmsphere/noarch/raw/master/r/rpmsphere-release-38-1.noarch.rpm'
