--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -55,7 +55,7 @@ jobs:
         curl -L https://github.com/WhitewaterFoundry/Fedora-Remix-for-WSL/releases/download/40.1.0/Fedora-Remix-for-WSL-SL_40.1.0.0_x64_arm64.msixbundle -o fedora.msixbundle
         unzip fedora.msixbundle Fedora-Remix-for-WSL-SL_40.1.0.0_x64.msix
         unzip Fedora-Remix-for-WSL-SL_40.1.0.0_x64.msix install.tar.gz
-        wsl --update --pre-release
+        wsl --update
         wsl --set-default-version 2
         wsl --import fedora fedora install.tar.gz
         wsl --set-default fedora
