--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
         unzip fedora.msixbundle Fedora-Remix-for-WSL-SL_39.0.1.0_x64.msix
         unzip Fedora-Remix-for-WSL-SL_39.0.1.0_x64.msix install.tar.gz
         wsl --update
+        wsl --set-default-version 2
         wsl --import fedora fedora install.tar.gz
         wsl --set-default fedora
         wsl sh -c 'dnf -y install https://github.com/rpmsphere/noarch/raw/master/r/rpmsphere-release-38-1.noarch.rpm'
