Give artifacts unique names.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ github.event.repository.name }}.${{ github.sha }}
+        name: ${{ github.event.repository.name }}.${{ github.sha }}.fluxengine.pkg
         path: fluxengine/FluxEngine.pkg
 
   build-windows:
@@ -94,5 +94,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ github.event.repository.name }}.${{ github.sha }}
+        name: ${{ github.event.repository.name }}.${{ github.sha }}.windows.zip
         path: fluxengine/fluxengine-windows.zip
