--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg
         find /usr/local/include/google/
+        brew list protobuf
     - name: make
       run: gmake -j1 -C fluxengine -V1
 
