Return of debugging.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -39,8 +39,9 @@ jobs:
       run: |
         brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg
         brew list protobuf
+        pkg-config --libs --cflags protobuf
     - name: make
-      run: gmake -j1 -C fluxengine -V1
+      run: gmake -j1 -C fluxengine V=1
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
