Adjust the number of OSX cpus.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,7 +97,7 @@ jobs:
 
     - name: make
       run: |
-        gmake -j $(nprocs)
+        gmake -j2
         mv FluxEngine.pkg FluxEngine-${{ runner.arch }}.pkg
 
     - name: tag
