--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg
     - name: make
-      run: gmake -C fluxengine -j $(nprocs)
+      run: gmake -C fluxengine -j2
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
