--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -38,7 +38,7 @@ jobs:
         path: 'fluxengine-testdata'
     - name: apt
       run: >
-        sudo apt install -y python3 make xz-utils python3 python3-hamcrest
+        apt install -y python3 make xz-utils python3 python3-hamcrest
         protobuf-compiler libprotobuf-dev libsqlite3-dev
         libfmt-dev libprotobuf-dev wx-common pkg-config
         libudev-dev g++ libwxgtk3.0-gtk3-dev
