--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -36,6 +36,8 @@ jobs:
       with:
         repository: 'davidgiven/fluxengine-testdata'
         path: 'fluxengine-testdata'
+    - name: apt update
+      run: apt update
     - name: apt
       run: >
         apt install -y python3 make xz-utils python3 python3-hamcrest
