--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -24,28 +24,28 @@ jobs:
     - name: make
       run: CXXFLAGS="-Wp,-D_GLIBCXX_ASSERTIONS" make -j`nproc` -C fluxengine
 
-  build-linux-debian-11:
-    runs-on: ubuntu-22.04
-    container: debian:11
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        repository: 'davidgiven/fluxengine'
-        path: 'fluxengine'
-    - uses: actions/checkout@v4
-      with:
-        repository: 'davidgiven/fluxengine-testdata'
-        path: 'fluxengine-testdata'
-    - name: apt update
-      run: apt update
-    - name: apt
-      run: >
-        apt install -y python3 make xz-utils python3 python3-hamcrest
-        protobuf-compiler libprotobuf-dev libsqlite3-dev
-        libfmt-dev libprotobuf-dev wx-common pkg-config
-        libudev-dev g++ libwxgtk3.0-gtk3-dev
-    - name: make
-      run: make -C fluxengine
+  #build-linux-debian-11:
+  #  runs-on: ubuntu-22.04
+  #  container: debian:11
+  #  steps:
+  #  - uses: actions/checkout@v4
+  #    with:
+  #      repository: 'davidgiven/fluxengine'
+  #      path: 'fluxengine'
+  #  - uses: actions/checkout@v4
+  #    with:
+  #      repository: 'davidgiven/fluxengine-testdata'
+  #      path: 'fluxengine-testdata'
+  #  - name: apt update
+  #    run: apt update
+  #  - name: apt
+  #    run: >
+  #      apt install -y python3 make xz-utils python3 python3-hamcrest
+  #      protobuf-compiler libprotobuf-dev libsqlite3-dev
+  #      libfmt-dev libprotobuf-dev wx-common pkg-config
+  #      libudev-dev g++ libwxgtk3.0-gtk3-dev
+  #  - name: make
+  #    run: make -C fluxengine
       
   build-macos-current:
     strategy:
@@ -82,7 +82,7 @@ jobs:
         unzip fedora.msixbundle Fedora-Remix-for-WSL-SL_41.0.0.0_x64.msix
         unzip Fedora-Remix-for-WSL-SL_41.0.0.0_x64.msix install.tar.gz
         wsl --update
-        wsl --set-default-version 2
+        wsl --set-default-version 1
         wsl --import fedora fedora install.tar.gz
         wsl --set-default fedora
         wsl sh -c 'dnf -y install https://github.com/rpmsphere/noarch/raw/master/r/rpmsphere-release-40-1.noarch.rpm'
